--- a/src/Todos/TodoForm.module.css
+++ b/src/Todos/TodoForm.module.css
@@ -12,23 +12,7 @@
 	width: 45%;
 	height: 30px;
 	font-size: 1.3rem;
-	border: 1px solid rgba(0, 0, 0, 0.2);
-}
-
-.todoFormContainer button {
-	margin-left: 20px;
-	height: 50px;
-	cursor: pointer;
-	background-color: beige;
-	font-size: 1.5rem;
-}
-
-.todoFormContainer button:hover {
-	background-color: rgb(240, 240, 155);
-}
-
-.todoFormContainer input,
-.todoFormContainer button {
 	padding: 10px 15px;
+	border: 1px solid rgb(153, 147, 147);
 	border-radius: 5px;
 }
